[gd_scene load_steps=6 format=3 uid="uid://dt8qclfbagapf"]

[ext_resource type="Script" uid="uid://bkiau28tbe7vt" path="res://Objects/hook.gd" id="1_ymdgi"]
[ext_resource type="Texture2D" uid="uid://dyxb53tbaq43q" path="res://Sprites/hook2.png" id="2_vqrsm"]
[ext_resource type="Texture2D" uid="uid://dxi8xd75op4vu" path="res://Sprites/hookline.png" id="3_ymdgi"]
[ext_resource type="Texture2D" uid="uid://3frw7c7ebeee" path="res://Sprites/bobber.png" id="4_uv86o"]

[sub_resource type="SphereShape3D" id="SphereShape3D_vqrsm"]
radius = 1.0

[node name="hook" type="Node3D"]
script = ExtResource("1_ymdgi")
lineLength = 5.0
reelingSpeed = 5.0

[node name="hookSprite" type="Sprite3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, -5, 0)
offset = Vector2(0, 200)
billboard = 2
texture_filter = 1
texture = ExtResource("2_vqrsm")

[node name="hookLineSprite" type="Sprite3D" parent="hookSprite"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.09112, 4.04465, -0.0484984)
billboard = 2
texture = ExtResource("3_ymdgi")

[node name="bobberSprite" type="Sprite3D" parent="hookSprite"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.66186, 0)
billboard = 2
texture = ExtResource("4_uv86o")

[node name="hookArea" type="Area3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5, 0)
collision_layer = 32
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="hookArea"]
shape = SubResource("SphereShape3D_vqrsm")

[node name="autoSetLength" type="RayCast3D" parent="."]
target_position = Vector3(0, -1000, 0)
hit_back_faces = false
debug_shape_thickness = 5

[connection signal="body_entered" from="hookArea" to="." method="_on_body_entered"]
